--- a/src/views/_mixins.pug
+++ b/src/views/_mixins.pug
@@ -7,4 +7,6 @@ mixin image(env, options)
     var attrs = {}
     attrs.src = (env == 'dev') ? options.dev || "images/image.jpg" : options.prod || "images/image.jpg"
     attrs.alt = options.alt || "uniongas.com"
+  if attributes.class
+    - attrs.class = attributes.class
   img&attributes(attrs)
