--- a/src/views/layout/_sidebar.pug
+++ b/src/views/layout/_sidebar.pug
@@ -2,7 +2,7 @@
   .medium-3.large-3.columns.hide-for-small-only.hide-on-print(style='padding-right:1rem;')
     // googleoff: all
     h1#leftnav-heading.visually-hidden Section Menu
-    nav#left-nav.leftnav.show-for-large-up.hide-for-print(role='navigation')
+    nav#left-nav.leftnav.show-for-large-up.hide-for-print(role='navigation', style="padding-right:1rem;")
       // accessible sidebar sublayout
       ul
         li.visually-hidden Residential
