--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -7,18 +7,23 @@ block vars
     var images = {
       header: {
           dev: 'hdr.jpg',
-          prod: '-/media/DAEB8B56DE534B2596361913ED1A2FC3.ashx?la=en',
+          prod: '',
           alt: 'A girl catching snowflakes, snow on evergreens'
         },
-      story1:{
-        dev: 'review.jpg',
-        prod: '-/media/3B975DC96F8C4F0984D7AB6354A5447A.ashx?la=en',
-        alt: 'People reviewing their natural gas bill.'
+      onecall:{
+        dev: 'onecall.jpg',
+        prod: '',
+        alt: ''
       },
-      story2:{
-        dev: 'laptop.jpg',
-        prod: '-/media/DE27A00CCA7340C4AE7760F02E0CBF22.ashx?la=en',
-        alt: 'Laptop with image of MyAccount details.'
+      callBeforeYouDig:{
+        dev: 'callBeforeYouDig.jpg',
+        prod: '',
+        alt: ''
+      },
+      piggyBank:{
+        dev: 'piggyBank.jpg',
+        prod: '',
+        alt: ''
       }
     }
 
@@ -28,55 +33,43 @@ block content
       .intouch
         .row.text-center(style='margin:30px 0;')
           +image(locals.site.env, images.header)(class="hero")
-        h1.pageTitle Top 3 questions about cap and trade
+        h1.pageTitle.text-center Call or click before you dig into spring
         .row
-          +image(locals.site.env, images.story1)(class="margin--right margin--bottom left small-full")
-          p
-            strong 1. What is cap and trade?
-            br
-            | The provincial government’s cap-and-trade program, which started on Jan. 1, 2017, sets a target to reduce the amount of greenhouse gas (GHG) emissions in Ontario. Union Gas is required to buy emission allowances for the natural gas you use, and those costs are recovered on your bill. The government plans to use the funds raised by this program to support Ontario’s Climate Change Action Plan. Visit <a href="uniongas.com/capandtrade">uniongas.com/capandtrade</a> to learn more.
-          p
-            strong 2. How much will cap and trade increase my bill?
-            br
-            | The current cost of GHG emission allowances – about 3.3 cents per cubic metre (m<sup>3</sup>) of natural gas used – is included in the Delivery line on your bill. The price of emission allowances can change over time, but the Ontario Energy Board must approve all costs before they’re charged to you. By using the calculator found at <a href="uniongas.com/capandtrade">uniongas.com/capandtrade</a>, you can estimate what cap and trade is costing you.
-          p
-            strong 3. What can I do to reduce the cost?
-            br
-            | The amount you’ll pay for cap and trade depends on the amount of gas you use. Union Gas has effi ciency programs and simple tips to help you reduce your gas use and lower your overall energy costs along with the costs of cap and trade. Go to <a href="uniongas.com/savemoney" target="_blank">uniongas.com/savemoney</a> to check them out.
+          +image(locals.site.env, images.callBeforeYouDig)(class="margin--bottom")
+          p 
+            strong With the worst of winter over, once again yardwork beckons. As you prepare to tackle outdoor projects, don’t forget to put safety ﬁrst. 
+            | At least five business days before your shovel breaks ground, contact <strong>Ontario One Call</strong> to locate and mark utility lines on your property. They’re fast, their service is free and they’ll save you from costly – possibly dangerous – accidents. Here’s what you need to know:
 
+          ol
+            li It's against the law in Ontario to dig without having natural gas lines located. 
+            li Digging or excavating could damage the network of hydro, gas, water and TV/telephone lines that may lie just below the surface of your property. 
+            li Damage to these pipes or wires could create a safety hazard or shut down service to an entire neighbourhood until the system is repaired. 
+            li Homeowners and/or their contractors are liable for damages, which could include a costly lawsuit if personal injury or property damage result. 
+            .bordered-item.clearfix
+              .columns.small-9.has-number Contact Ontario One Call at <a href="http://on1call.com" target="_blank">on1call.com</a> or toll free at <span style="white-space:nowrap">1-800-400-2255</span>. 
+              .columns.small-3
+                +image(locals.site.env, images.onecall)(style="max-width:100px;")  
+            li You’ll be provided with a free locate report of the underground utility lines on your property so you can complete your project safely and responsibly. 
+            li Visit <a href="https://www.uniongas.com/safety">uniongas.com/safety</a> for more information about natural gas safety.
+
+      
+        hr.margin--top.margin--bottom
+
+        h2 Natural gas continues to be Ontario’s best energy value
+ 
+        .row
+          +image(locals.site.env, images.piggyBank)(class="right margin--leftmargin--bottom")
+        
+          p For the past 10 years, while the cost of just about everything has gone up, natural gas has actually come down in price. In fact, despite recent rate increases, you’re saving up to $2,500 a year by using natural gas instead of electricity, oil or propane to heat your home and water. 
+          p Massive deposits of natural gas right here in North America have resulted in record low prices, and experts agree that low, stable rates can be counted on well into the next decade. 
+          p Meanwhile, electricity prices have basically doubled over the past few years. And if you’re using electricity during peak hours, time-of-use rates will push those costs even higher. 
+          p Now and for the foreseeable future, choosing clean, affordable natural gas makes more sense – and saves you more money – than ever before. 
+          p Visit <a href="https://www.uniongas.com/residential">uniongas.com/residential</a> today to learn more about the ongoing value of natural gas.
         .row
           .callout
-            h2 You Pay, So Have Your Say
-            p We’d like you to participate in a questionnaire about how we’re meeting your utility needs. Visit <A href="uniongasplans.ca">uniongasplans.ca</a> to take the questionnaire.
-
-        hr
-
-        h2.small-text-center.medium-text-left MyAccount helps at tax time
-        .row
-          +image(locals.site.env, images.story2)(class="left margin--right margin--bottom columns small-8 small-offset-2 medium-12 medium-offset-0")
-        .columns.small-12
-            p MyAccount, your Union Gas online account manager, is designed to make life easier – especially at tax time. Simply log in to MyAccount for a summary of your annual natural gas bills and payments.
-            ul.margin--bottom
-              li
-                strong Get an annual summary of your gas use and bill history, with cap-and-trade costs shown separately
-              li
-                strong Print or download up to 24 months of account history
-              li
-                strong No need to save and file (or lose) your bills when they’re at your  fingertips 24/7
-              li
-                strong Mobile and desktop versions let you access your Union Gas account any time, anywhere
-              li
-                strong MyAccount is secure, protected, organized and, best of all, FREE
-
-        .row
-          .callout
-            h3 To get your billing history:
-            ol
-              li Log in to MyAccount at <a href="uniongas.com/myaccount" target="_blank">uniongas.com/myaccount</a>
-              li Click on the Bills & Payments tab
-            h3 If you’ve never used MyAccount:
-            ol
-              li Go to <a href="uniongas.com/myaccount" target="_blank">uniongas.com/myaccount</a> and click Register Now
-              li  Complete the registration page – you’ll need your 14-digit  Union Gas account number
-        .row
-          p Choose to get your gas bill as a PDF attached to your monthly email notification for even more convenience – no login or password required. Find out more about MyAccount at <A href="uniongas.com/residential">uniongas.com/residential</a>.
+            h3 Cap-and-trade recap
+            ul 
+              li The Ontario government's cap-and-trade program began Jan. 1, 2017, and the costs are included in the Delivery line of your natural gas bill 
+              li Use the calculator at <a href="uniongas.com/capandtrade">uniongas.com/capandtrade</a> to estimate your monthly cap-and-trade charge and its impact on your household budget 
+              li Visit <a href="uniongas.com/capandtrade">uniongas.com/capandtrade</a> for programs and tips to reduce your gas use and the cost of cap and trade
+      
